# airflow-mcp

./: .env.example  .gitignore  LICENSE  README.md  REPO_POLICY.md  conftest.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: enable-branch-protection.sh
src/airflow_mcp/: __init__.py  client.py  config.py  errors.py  server.py  versioning.py
src/airflow_mcp/tools/: __init__.py  _helpers.py  dag_runs.py  dags.py  pools.py  system.py  tasks.py  variables.py
tests/: test_client.py  test_smoke.py  test_versioning.py
