[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "airflow-mcp"
dynamic = ["version"]
description = "Model Context Protocol (MCP) server for Apache Airflow 2.x and 3.x"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Mavis" }]
keywords = ["airflow", "mcp", "model-context-protocol", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/inav/airflow-mcp"
Issues = "https://github.com/inav/airflow-mcp/issues"
Changelog = "https://github.com/inav/airflow-mcp/releases"

[project.scripts]
airflow-mcp = "airflow_mcp.server:main"

# ---------------------------------------------------------------------------
# Versioning: read from git tags via hatch-vcs.
# Tag a commit as `vX.Y.Z` and the package version becomes X.Y.Z automatically.
# Add `-N-gHASH` suffix automatically between tags (dirty/dev installs).
# ---------------------------------------------------------------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/airflow_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_mcp"]

[tool.hatch.build.targets.sdist]
exclude = [".github", ".gitignore", ".pre-commit-config.yaml"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/airflow_mcp/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]

[tool.mypy]
python_version = "3.10"
# Pragmatic strictness for an early-stage project. Once the FastMCP
# decorator shim and the @tool_errors wrapper have proper type stubs,
# tighten this to `strict = true` and remove the per-code disables below.
warn_unused_configs = true
warn_redundant_casts = true
# `warn_unused_ignores` is left off because the `# type: ignore[union-attr]`
# comments on `@mcp.tool()` decorators were calibrated against an older
# version of `mcp`; the current `mcp>=1.27` types are now correct, so
# mypy reports them as unused. Re-enable this once the ignore comments
# have been cleaned up across the codebase.
warn_unused_ignores = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
# Per-code overrides — see the table at the top of this file.
#   * no-any-return:    FastMCP's `@mcp.tool()` returns a generic decorator
#                       whose return type is `Any`; threading `Any` through
#                       our coroutine return types triggers this. Once
#                       mcp-python-sdk ships typed decorators, this can go.
#   * union-attr / attr-defined:
#                       Same root cause as above.
disable_error_code = ["no-any-return", "union-attr", "attr-defined"]
files = ["src/airflow_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.coverage.run]
source = ["airflow_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
